capitalized the I in camera image file name

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
     <div class="container text-center">
       <h2>Welcome</h2>
       <img usemap="#camera"
-        src="img/ai-image.png"
+        src="Img/ai-image.png"
       />
       <map name="camera">
         <area
