added 2nd area to image map

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
         coords="390,532, 461,588, 498,604, 504,640, 556,648, 616,731, 556,848, 211,832, 211,623, 325,536"
         shape="poly"
         href="https://www.bestbuy.com/site/sony-alpha-a7-iii-mirrorless-video-camera-with-fe-28-70-mm-f3-5-5-6-oss-lens-black/6213100.p?skuId=6213100&extStoreId=1080&utm_source=feed&ref=212&loc=18182031001&gad_source=1&gclid=Cj0KCQjw99e4BhDiARIsAISE7P8fqokQUNJ_G0x3-xAlMj9WXwk3ZigW7FwoDoJWgt9VmWL6vCjCLBAaArDOEALw_wcB&gclsrc=aw.ds"/>
+        <area
+        title="click-the-lens"
+        coords="577,473, 892,476, 872,836 603,811, 622,741, 593,661, 577,473"
+        shape="poly"
+        href="https://www.bestbuy.com/site/sony-fe-70-200mm-f2-8-gm-oss-ii-full-frame-telephoto-zoom-g-master-e-mount-lens-white/6484729.p?skuId=6484729&utm_source=feed&ref=212&loc=18186496232&gad_source=1&gclid=Cj0KCQjw99e4BhDiARIsAISE7P9FvVSrRyr5vzUxS4e_XdjXKw-RWXzAqJSidejZcCfqHO2yhRZ8V5saAt3JEALw_wcB&gclsrc=aw.ds"/>
       </map>
       <p style="background: rgba(0, 0, 0, 0.4)">
         At UrbanFX Photography, we believe in capturing the essence of every
