added bootstrap badge, alert, and html buttons that run functions

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="about.js"></script>
   </head>
   <body>
     <header class="header text-center">
@@ -45,15 +46,13 @@
     <div class="container text-center">
     <div class="row">
       <div class="col">
-        <img src="Img/Photographer.jpg" height="250px" class="photoFrame" />
-        <p>Alexander Hamilton II</p>
+        <button onclick="showPhotographer1()" id="alex">View Photographer1</button>
       </div>
       <div class="col">
         <img src="Img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <img src="Img/photographertwo.jpg" height="250px" class="photoFrame" />
-        <p>Alyssa Hamilton</p>
+        <button onclick="showPhotographer2()" id="alyssa">View Photographer2</button>
       </div>
     </div>
     <div>
