--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
         Book Now
       </button>
     </header>
+    <div id="bsAlert">
+
+    </div>
     <nav class="navbar bg-body-tertiary">
       <form class="container-fluid justify-content-center">
         <a href="index.html">
@@ -94,6 +97,10 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
         and let us capture your story in a way only we can! Contact Us Now and
         start your journey towards stunning, unique photography.
       </p>
+      <br><br><br>
+      <div>
+        <h2> Our Services <span class="badge text-bg-secondary">New</span></h2>
+      </div>
     </div>
     <br /><br /><br /><br />
     <div class="container fade-in-card">
