added REST API communication

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <div>
     <h3 style="color:white; padding-top:50px;"></u>Schedule a Phone Appointment</h3>
 
-    <form onsubmit="makePromise()">
+    <form onsubmit="handleSubmit2(event)">
       <label for="name">Name</label>
     <input id="name" type="text" name="name" placeholder="Full Name" required>
     <br>
