--- a/index.html
+++ b/index.html
@@ -224,6 +224,27 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
         </div>
       </div>
     </div>
+    <div class="text-center">
+    <div>
+      <h2>How about some art trivia???</h2>
+      </div>
+      <br>
+      <div>
+      <p>Click the button below to to view art trivia.</p>
+    </div>
+    <div>
+      <button onclick="handleClick()">Trivia</button>
+    </div>
+    
+    <div >
+      <p id="outputTag" style="text-align: center;
+      list-style-position: inside;
+      margin: 0 auto;
+      padding: 0;"></p>
+    </div>
+   
+    </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -234,5 +255,7 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
     <script>
       imageMapResize();
     </script>
+   <footer>
+    <p class="text-center">Made at Codex Academy</p></footer> 
   </body>
 </html>
