--- a/about.html
+++ b/about.html
@@ -12,36 +12,37 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="about.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <header class="header text-center">
       <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
-      <button type="button" class="btn btn-success">Book Now</button>
+      <button type="button" class="btn btn-success" onclick="redirect()">
+        Book Now
+      </button>
+        <nav id="bsAlert" class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand"  class="nav-link" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a  class="nav-link active" aria-current="page" href="about.html">About</a>
+                </li>
+                <li class="nav-item"  >
+                  <a class="nav-link" href="gallery.html">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html" aria-disabled="true">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
-    <nav class="navbar bg-body-tertiary">
-      <form class="container-fluid justify-content-center">
-        <a href="index.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Home
-          </button>
-        </a>
-        <a href="about.html">
-          <button class="btn btn-outline-success me-2" type="button">
-            About
-          </button>
-        </a>
-        <a href="gallery.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Gallery
-          </button>
-        <a href="contact.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Contact
-          </button>
-        </a>
-      </form>
-    </nav>
     <br /><br /><br /><br />
     <div class="container text-center">
     <div class="row">
@@ -62,6 +63,7 @@
       </div>
 
       <br /><br /><br />
+      <article>
       <p class="container text-center" style="background:rgba(0, 0, 0, 0.4)">
         At UrbanFX Photography, we believe in capturing the essence of every
         moment with creativity and precision. As a dynamic sibling duo,
@@ -77,6 +79,7 @@
         and let us capture your story in a way only we can! Contact Us Now and
         start your journey towards stunning, unique photography.
       </p>
+    </article>
     </div>
     <br><br><br><br>
     <div class="container text-center">
@@ -124,6 +127,8 @@
         >Event</a
       >
     </div>
+    </main>
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
