--- a/gallery.html
+++ b/gallery.html
@@ -11,37 +11,37 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
   </head>
   <body>
     <header class="header text-center">
       <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
-      <button type="button" class="btn btn-success">Book Now</button>
+      <button type="button" class="btn btn-success" onclick="redirect()">
+        Book Now
+      </button>
+        <nav id="bsAlert" class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" class="nav-link" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a  class="nav-link"  href="about.html">About</a>
+                </li>
+                <li class="nav-item"  >
+                  <a class="nav-link active" aria-current="page" onclick="goNow()" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html" aria-disabled="true">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
-    <nav class="navbar bg-body-tertiary" id="navbar">
-      <form class="container-fluid justify-content-center">
-        <a href="index.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Home
-          </button>
-        </a>
-        <a href="about.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            About
-          </button>
-        </a>
-        <a href="gallery.html">
-          <button class="btn btn-outline-success me-2" type="button">
-            Gallery
-          </button>
-        </a>
-        <a href="contact.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Contact
-          </button>
-        </a>
-      </form>
-    </nav>
     <div class="text-center">
       <h2>Gallery</h2>
     </div>
