--- a/index.html
+++ b/index.html
@@ -11,49 +11,51 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="index.js"></script>
     <script src="
 https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
 "></script>
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"
+></script>
+
+<script>
+imageMapResize();
+</script>
   </head>
   <body>
     <header class="header text-center">
       <img src="ufxlogo.png" height="100px" style="border: solid 1px" />
       <h1>UrbanFX Photography</h1>
-      <button type="button" class="btn btn-success" id="bookNow">
+      <button type="button" class="btn btn-success" onclick="redirect()">
         Book Now
       </button>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" aria-current="page" class="nav-link active" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a  class="nav-link"  href="about.html">About</a>
+                </li>
+                <li class="nav-item"  >
+                  <a class="nav-link" id="galleryLink" href="gallery.html">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="contact.html" aria-disabled="true">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
-    <div id="bsAlert">
-
-    </div>
-    <nav class="navbar bg-body-tertiary">
-      <form class="container-fluid justify-content-center">
-        <a href="index.html">
-          <button class="btn btn-outline-success me-2" type="button">
-            Home
-          </button>
-        </a>
-        <a href="about.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            About
-          </button>
-        </a>
-        <a href="#">
-          <button
-            id="galleryButton"
-            class="btn btn-sm btn-outline-secondary"
-            type="button"
-          >
-            Gallery
-          </button>
-        </a>
-        <a href="contact.html">
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Contact
-          </button>
-        </a>
-      </form>
-    </nav>
+    <main>
+    <div></div>
     <div class="video-container" style="border: groove grey 20px">
       <video
         autoplay
@@ -226,7 +228,13 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
     </div>
     <div class="text-center">
     <div>
-      <h2>How about some art trivia???</h2>
+      <h2>Would you like to try some trivia?</h2>
+      <form>
+        <label for="yes">Yes</label>
+        <input type="radio" name="yes-no" id="yes">
+        <label for="no">no</label>
+        <input type="radio" name="yes-no" id="no">
+      </form>
       </div>
       <br>
       <div>
@@ -246,15 +254,7 @@ https://cdn.jsdelivr.net/npm/image-map-resizer@1.0.10/js/imageMapResizer.min.js
     </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="index.js"></script>
-    <script>
-      imageMapResize();
-    </script>
+</main>
    <footer>
     <p class="text-center">Made at Codex Academy</p></footer> 
   </body>
