--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,27 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <style>
+      /* Internal CSS for buttons */
+      button {
+        background-color: blue;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+      }
+      button:hover {
+        background-color: darkblue;
+      }
+    </style>
     <script src="contact.js"></script>
-    <script src="index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header text-center">
@@ -21,30 +40,16 @@
       <button type="button" class="btn btn-success" onclick="redirect()">
         Book Now
       </button>
-        <nav id="bsAlert" class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
-            <a class="navbar-brand" class="nav-link" href="index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a  class="nav-link"  href="about.html">About</a>
-                </li>
-                <li class="nav-item"  >
-                  <a class="nav-link" href="gallery.html">Gallery</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="contact.html" aria-disabled="true">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+      <nav class="nav">
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="gallery.html">Gallery</a>
+        <a class="nav-link active"  aria-current="page" href="contact.html">Contct</a>
+      </nav>
     </header>
+    <main>
     <div>
-   <form onsubmit= "makePromise1()">
+   <form onsubmit= "handleSubmit()">
     <label for="name">Name</label>
     <input id="name" type="text" name="name" placeholder="Full Name" required>
     <br>
@@ -73,6 +78,10 @@
     <div id="myOutput" style="color:white">
 
     </div>
- 
+  </div>
+  </main>
+  <footer>
+    <p class="text-center">Alexander Hamilton II</p>
+  </footer> 
   </body>
 </html>
