corrected automation and removed buttons on about.html, replaced with images

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ imageMapResize();
       </div>
     </div>
     <br /><br /><br /><br />
-    <div class="container fade-in-card">
+    <div class="container">
       <div class="row">
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
-            <img
+            <img class="fade-in-card"
               src="Img/headshot.jpg"
               class="card-img-top photoFrame"
               alt="#"
@@ -129,7 +129,7 @@ imageMapResize();
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
-            <img
+            <img class="fade-in-card"
               src="Img/portrait.jpeg"
               class="card-img-top photoFrame"
               alt="#"
@@ -145,7 +145,7 @@ imageMapResize();
         </div>
         <div class="col" style="margin: 5px">
           <div class="card text-center col" style="width: 22rem">
-            <img src="Img/prom.jpg" class="card-img-top photoFrame" alt="#" />
+            <img  src="Img/prom.jpg" class="card-img-top photoFrame fade-in-card" alt="#" />
             <div class="card-body">
               <h5 class="card-title">Prom</h5>
               <p class="card-text">Input text here</p>
@@ -159,7 +159,7 @@ imageMapResize();
           <div class="card text-center col" style="width: 22rem">
             <img
               src="Img/senior.jpeg"
-              class="card-img-top photoFrame"
+              class="card-img-top photoFrame fade-in-card"
               alt="#"
             />
             <div class="card-body">
@@ -175,7 +175,7 @@ imageMapResize();
           <div class="card text-center col" style="width: 22rem">
             <img
               src="Img/family.jpeg"
-              class="card-img-top photoFrame"
+              class="card-img-top photoFrame fade-in-card"
               alt="#"
             />
             <div class="card-body">
@@ -191,14 +191,14 @@ imageMapResize();
           <div class="card text-center col" style="width: 22rem">
             <img
               src="Img/branding1.jpeg"
-              class="card-img-top photoFrame"
+              class="card-img-top photoFrame fade-in-card"
               alt="#"
             />
             <div class="card-body">
               <h5 class="card-title">Branding</h5>
               <p class="card-text">View Event</p>
               <a href="gallery.html#branding" class="btn btn-primary"
-                >View Event</a
+                >View Branding</a
               >
             </div>
           </div>
@@ -208,7 +208,7 @@ imageMapResize();
     <div class="text-center" style="margin-top: 200px; margin-bottom: 100px">
       <h2>Feedback</h2>
     </div>
-    <div class="container testamonyPictures fade-in-card">
+    <div class="testamonyPictures">
       <div class="col text-center">
         <div>
           <img src="Img/testamony2.png" />
