--- a/about.html
+++ b/about.html
@@ -53,13 +53,13 @@
     <div class="container text-center">
     <div class="row">
       <div class="col">
-        <button onclick="showPhotographer1()" id="alex">View Photographer1</button>
+        <img src="Img/Photographer.jpg">
       </div>
       <div class="col">
         <img src="Img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <button onclick="showPhotographer2()" id="alyssa">View Photographer2</button>
+        <img src="Img/photographertwo.jpg"
       </div>
     </div>
     <div>
