--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
     <div class="text-center">
       <h2>Gallery</h2>
     </div>
-    <div class="container text-center">
+    <div class="container text-center fade-in-card" >
       <div class="row">
         <div class="col" id="headshots">
           <img
