correct img tag on about.html

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <img src="Img/ufxlogo.png" height="250px" />
       </div>
       <div class="col">
-        <img src="Img/photographertwo.jpg"
+        <img src="Img/photographertwo.jpg">
       </div>
     </div>
     <div>
