updated bootstrap group list

--- a/about.html
+++ b/about.html
@@ -96,41 +96,41 @@
     </div>
     <div class="list-group text-center">
       <a
-        href="#"
+        href="gallery.html#headshots"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
       >
         Headshots
       </a>
       <a
-        href="#"
+        href="gallery.html#portrait"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
         >Portrait</a
       >
       <a
-        href="#"
+        href="gallery.html#prom"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
         >Prom</a
       >
       <a
-        href="#"
+        href="gallery.html#senior"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
         >Senior</a
       >
       <a
-        href="#"
+        href="gallery.html#family"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
         >Family</a
       >
       <a
-        href="#"
+        href="gallery.html#branding"
         class="list-group-item list-group-item-action"
         style="background-color: gold"
-        >Event</a
+        >Branding</a
       >
     </div>
     </main>
