added loop and used array variables

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@ imageMapResize();
       <div>
         <h2> Our Services <span class="badge text-bg-secondary">New</span></h2>
       </div>
+      <div id="servicesTag">
+        <button onclick="viewServices()">View Services</button>
+      </div>
     </div>
     <br /><br /><br /><br />
     <div class="container">
